--- a/templates/background-noise.html
+++ b/templates/background-noise.html
@@ -15,7 +15,7 @@
             <!-- Reset button -->
             <button class="tools-result__reset reset">Reset view</button>
             <span class="tools-result__badge">View</span>
-            <div id="{{ active_page }}-results" class="tools-result__view"></div>
+            <div id="{{ active_page }}-results" class="tools-result__view" style="background-color: #EC008C;"></div>
         </section>
 
         <section class="tools-container">
@@ -30,7 +30,7 @@
                     <input type="number" aria-label="noise-density" aria-describedby="noise-density-description" min="1" max="100" placeholder="Noise density">
                     <input type="range" class="custom-range w-100" id="noise-density" min="1" max="100" value="100">
                     <!-- background-color -->
-                    <input type="color" id="background-color" aria-label="background-color" aria-describedby="background-color-description">
+                    <input type="color" id="background-color" aria-label="background-color" aria-describedby="background-color-description" value="#EC008C">
                 </div>
         
                 <!-- Code result -->
