--- a/templates/border-radius.html
+++ b/templates/border-radius.html
@@ -15,7 +15,7 @@
             <!-- Reset button -->
             <button class="tools-result__reset reset">Reset view</button>
             <span class="tools-result__badge">View</span>
-            <div id="{{ active_page }}-results" class="tools-result__view"></div>
+            <div id="{{ active_page }}-results" class="tools-result__view" style="background-color: #EC008C;"></div>
         </section>
 
         <section class="tools-container">
@@ -68,7 +68,7 @@
                     <!-- border-color -->
                     <input type="color" id="border-color" aria-label="border-color" aria-describedby="border-color-description">
                     <!-- background-color -->
-                    <input type="color" id="background-color" aria-label="background-color" aria-describedby="background-color-description">
+                    <input type="color" id="background-color" aria-label="background-color" aria-describedby="background-color-description" value="#EC008C">
                 </div>
         
                 <!-- Code result -->
