--- a/templates/box-shadow.html
+++ b/templates/box-shadow.html
@@ -15,7 +15,7 @@
             <!-- Reset button -->
             <button class="tools-result__reset reset">Reset view</button>
             <span class="tools-result__badge">View</span>
-            <div id="{{ active_page }}-results" class="tools-result__view"></div>
+            <div id="{{ active_page }}-results" class="tools-result__view" style="background-color: #EC008C;"></div>
         </section>
 
         <section class="tools-container">
@@ -62,7 +62,7 @@
                         <input type="range" class="custom-range w-100" id="box-shadow-opacity" min="0" max="1" value="1" step="0.01">
                     </div>
                     <!-- background-color -->
-                    <input type="color" id="background-color" aria-label="background-color" aria-describedby="background-color-description" class="background-color">
+                    <input type="color" id="background-color" aria-label="background-color" aria-describedby="background-color-description" class="background-color" value="#EC008C">
                 </div>
         
                 <!-- Code result -->
