--- a/templates/css-arrow.html
+++ b/templates/css-arrow.html
@@ -28,7 +28,7 @@
                         <!-- Radio top -->
                         <label class="radio__container">
                             <div class="radio__button">
-                                <input type="radio" name="arrow-direction" id="top" value="top" class="radio__button__hide">
+                                <input type="radio" name="arrow-direction" id="top" value="top" class="radio__button__hide" checked>
                                 <span class="radio__button__checkmark"></span>
                             </div>
                             <span class="radio__text">Top</span>
@@ -74,9 +74,9 @@
                         <input type="range" class="custom-range w-100" id="arrow-position" min="0" max="100" value="50">
                     </div>
                     <!-- arrow-color -->
-                    <input type="color" id="arrow-color" aria-label="background-color" aria-describedby="arrow-color-description">
+                    <input type="color" id="arrow-color" aria-label="background-color" aria-describedby="arrow-color-description" value="#ec008c">
                     <!-- arrow-border-color -->
-                    <input type="color" id="arrow-border-color" aria-label="background-color" aria-describedby="arrow-border-color-description">
+                    <input type="color" id="arrow-border-color" aria-label="background-color" aria-describedby="arrow-border-color-description" value="#ab1766">
                 </div>
         
                 <!-- Code result -->
