--- a/templates/text-shadow.html
+++ b/templates/text-shadow.html
@@ -15,7 +15,7 @@
             <!-- Reset button -->
             <button class="tools-result__reset reset">Reset view</button>
             <span class="tools-result__badge">View</span>
-            <div id="{{ active_page }}-results" class="tools-result__view" style="font-size: 78px; font-weight: bold;">Sample text</div>
+            <div id="{{ active_page }}-results" class="tools-result__view" style="font-size: 78px; font-weight: bold; color: #EC008C;">Sample text</div>
         </section>
 
         <section class="tools-container">
