fix color inputs in font styler and text shadow

--- a/templates/font-styler.html
+++ b/templates/font-styler.html
@@ -123,9 +123,9 @@
                         </optgroup>
                     </select>
                     <!-- text-decoration-color -->
-                    <input type="color" id="text-decoration-color" aria-label="background-color" aria-describedby="text-decoration-color-description">
+                    <input type="color" id="text-decoration-color" aria-label="background-color" aria-describedby="text-decoration-color-description" value="#EC008C">
                     <!-- text-color -->
-                    <input type="color" id="text-color" aria-label="background-color" aria-describedby="text-color-description">
+                    <input type="color" id="text-color" aria-label="background-color" aria-describedby="text-color-description" value="#EC008C">
                 </div>
         
                 <!-- Code result -->
