--- a/templates/text-shadow.html
+++ b/templates/text-shadow.html
@@ -36,7 +36,7 @@
                         <input type="range" class="custom-range w-100" id="text-line-height" min="0.7" max="2" step="0.1" value="1">
                     </div>
                     <!-- text-color -->
-                    <input type="color" id="text-color" aria-label="background-color" aria-describedby="text-color-description" class="background-color">
+                    <input type="color" id="text-color" aria-label="background-color" aria-describedby="text-color-description" class="background-color" value="#EC008C">
                     <!-- text-shadow-horizontal -->
                     <div>
                         <input type="number" aria-label="text-shadow-horizontal" aria-describedby="text-shadow-horizontal-description" min="-10" max="10" placeholder="Text shadow horizontal">
