--- a/templates/font-styler.html
+++ b/templates/font-styler.html
@@ -123,9 +123,15 @@
                         </optgroup>
                     </select>
                     <!-- text-decoration-color -->
-                    <input type="color" id="text-decoration-color" aria-label="background-color" aria-describedby="text-decoration-color-description" value="#EC008C">
+                    <label for="text-decoration-color" class="input-color">
+                        <span class="input-color__text">Text decoration color</span>
+                        <input type="color" id="text-decoration-color" name="text-decoration-color" aria-describedby="text-decoration-color-description" value="#EC008C">
+                    </label>
                     <!-- text-color -->
-                    <input type="color" id="text-color" aria-label="background-color" aria-describedby="text-color-description" value="#EC008C">
+                    <label for="text-color" class="input-color">
+                        <span class="input-color__text">Text color</span>
+                        <input type="color" id="text-color" name="text-color" aria-describedby="text-color-description" value="#EC008C">
+                    </label>
                 </div>
         
                 <!-- Code result -->
