--- a/templates/box-shadow.html
+++ b/templates/box-shadow.html
@@ -15,6 +15,7 @@
             <!-- Reset button -->
             <button class="tools-result__reset reset">Reset view</button>
             <span class="tools-result__badge">View</span>
+            <span class="js-results-theme tools-result__theme">Light theme</span>
             <div id="{{ active_page }}-results" class="tools-result__view" style="background-color: #EC008C;"></div>
         </section>
 
